# gen3-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.playwright-mcp/: page-2026-04-25T11-53-51-253Z.yml  page-2026-04-25T11-55-08-350Z.yml
skills/: README.md
skills/gen3-arborist/: SKILL.md
skills/gen3-audit-service/: SKILL.md
skills/gen3-auth/: SKILL.md
skills/gen3-fence/: SKILL.md
skills/gen3-guppy/: SKILL.md
skills/gen3-hatchery/: SKILL.md
skills/gen3-indexd/: SKILL.md
skills/gen3-manifestservice/: SKILL.md
skills/gen3-metadata-service/: SKILL.md
skills/gen3-peregrine/: SKILL.md
skills/gen3-requestor/: SKILL.md
skills/gen3-shared/: SKILL.md
skills/gen3-sheepdog/: SKILL.md
skills/gen3-workspace-token-service/: SKILL.md
src/: config.rs  http.rs  main.rs  ui.rs
src/auth/: mod.rs  setup.rs  token.rs
src/commands/: mod.rs
src/commands/config/: mod.rs
src/commands/guppy/: aggregation.rs  download.rs  graphql.rs  mapping.rs  mod.rs  system.rs
src/commands/indexd/: aliases.rs  blank.rs  bulk.rs  bundles.rs  mod.rs  records.rs  system.rs
src/commands/peregrine/: datasets.rs  graphql.rs  metadata.rs  mod.rs  system.rs
src/commands/sheepdog/: mod.rs  program.rs
