[package]
name = "gen3"
version = "0.1.0"
edition = "2021"
description = "Gen3 platform agentic CLI"
authors = []

[[bin]]
name = "gen3"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
